# SocialScannerWeb

./: .env  .env.dev  .env.prod  .gitignore  .windsurfrules  Date.docx  PostgreRenderCert.py  PostgreRenderCert_Standalone.py  README.md  db.sql  debug_snapchat.html  humandynasser@gmail.com_session  ic_config.py  pyproject.toml  render.yaml  requirements.txt  run.py  server.crt  tasks.py  wsgi.py
.VSCodeCounter/2024-05-09_03-05-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-05-09_03-05-33/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-05-09_03-06-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
apps/: __init__.py  config.py  import.csv
apps/authentication/: __init__.py  forms.py  models.py  routes.py  util.py
apps/content_types/: __init__.py  forms.py  models.py  routes.py
apps/globals/: __init__.py  routes.py  util.py
apps/home/: forms.py  models.py  routes.py  util.py
apps/profiles/: __init__.py  forms.py  models.py  routes.py
apps/reports/: models.py  routes.py
apps/social/: __init__.py  forms.py  models.py  routes.py
migrations/versions/: 1dc00b6b9ac5_socialaccount3.py  23317857c085_followers.py  2637c67192d6_text.py  2ee9443588db_platforms.py  3157a52ef7c5_260424.py  39cfd8f7e467_profilepicture3.py  43b7957ebdc6_ids1.py  4491e0a1c3a2_unique_username_platform.py  490ec4075a9d_profilepicture2.py  4a00d934f75a_270422_3.py  (+24 more)
(+49 files in other folders)
