[tool.poetry]
name = "flask-pixel"
version = "0.1.0"
description = ""
authors = ["muhammad ziada <engziada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
werkzeug = "^3.0.1"
jinja2 = "^3.1.3"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"
wtforms = "^3.1.2"
flask-wtf = "^1.2.1"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.28"
email-validator = "^2.1.1"
gunicorn = "^21.2.0"
flask-restx = "^1.3.0"
python-dotenv = "^1.0.1"
flask-minify = "^0.42"
psycopg2 = "^2.9.9"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
