[tool.poetry]
name = "SocialScannerWeb"
version = "0.1.0"
description = ""
authors = ["Muhammad Ziada <engziada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
werkzeug = "^3.0.1"
jinja2 = "^3.1.3"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"
wtforms = "^3.1.2"
flask-wtf = "^1.2.1"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.28"
email-validator = "^2.1.1"
gunicorn = "^21.2.0"
flask-restx = "^1.3.0"
python-dotenv = "^1.0.1"
flask-minify = "^0.42"
psycopg2 = "^2.9.9"
icecream = "^2.1.3"
bs4 = "^0.0.2"
instaloader = "^4.11"
wtforms-sqlalchemy = "^0.4.1"
flask-apscheduler = "^1.13.1"
waitress = "^3.0.0"
pandas = "^2.2.2"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"